--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TarefasApp",
+  "name": "EventosApp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -33,7 +33,7 @@
     "xlsx-template": "0.0.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.1",
+    "angular-mocks": "1.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.8.1",
