--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
+    "aws-sdk": "^2.3.3",
     "body-parser": "~1.12.4",
     "bower": "^1.4.1",
     "compression": "^1.5.0",
